Apply the remaining recipes of OpenRewrite.